[DEPLOY] Minor changes, to get code running